# contourpy

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  build_requirements.txt  meson-cross.ini  meson.build  pyproject.toml  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  SECURITY.md  codecov.yml  dependabot.yml
.github/workflows/: build_wheels.yml  pyodide.yml  test.yml  test_own_nightlies.yml  test_with_cibuildwheel.yml
benchmarks/: README.md  asv.conf.json  loader.py  plot_benchmarks.py
benchmarks/benchmarks/: bench_base.py  bench_fill_type.py  bench_fill_type_render.py  bench_filled.py  bench_filled_chunk.py  bench_filled_mpl20xx.py  bench_filled_mpl20xx_render.py  bench_filled_serial.py  bench_filled_serial_chunk.py  bench_filled_serial_quad_as_tri.py  bench_filled_serial_quad_as_tri_render.py  bench_filled_serial_render.py  bench_filled_threaded.py  bench_line_type.py  bench_line_type_render.py  bench_lines.py  bench_lines_chunk.py  bench_lines_mpl20xx.py  bench_lines_mpl20xx_render.py  bench_lines_serial.py  bench_lines_serial_chunk.py  bench_lines_serial_quad_as_tri.py  bench_lines_serial_quad_as_tri_render.py  bench_lines_serial_render.py  bench_lines_threaded.py  util_bench.py
contourpy/: __init__.py
docs/: benchmarks.rst  changelog.md  changelog.md.in  changelog.rst  conf.py  config.md  config.rst  description.md  description.rst  developer_guide.md  developer_guide.rst  index.md  index.rst  installation.md  installation.rst  process_changelog.py  quickstart.md  quickstart.rst  usage.md  usage.rst
docs/api/: _contourpy.md  _contourpy.rst  index.md  index.rst  top.rst  util.md  util.rst
docs/api/contourpy/: ContourGenerator.md  ContourGenerator.rst  contour_generator.md  contour_generator.rst  enums.md  enums.rst  index.md  index.rst  other.md  other.rst
docs/benchmarks/: calculation.md  calculation.rst  chunks.md  chunks.rst  index.md  index.rst  rendering.md  rendering.rst  threads.md  threads.rst
docs/sphinxext/: name_supports.py  name_supports_type.py  plot_directive.py  table.py
docs/user_guide/: chunks.rst  fill_type.rst  index.rst  line_type.rst  name.rst  quad_as_tri.rst  threads.rst  x_and_y.rst  z_corner_mask.rst  z_interp.rst
docs/user_guide/calculate/: chunks.md  chunks.rst  fill_type.md  fill_type.rst  index.md  index.rst  limitations.md  limitations.rst  line_type.md  line_type.rst  name.md  name.rst  quad_as_tri.md  quad_as_tri.rst  threads.md  threads.rst  x_and_y.md  x_and_y.rst  z_corner_mask.md  z_corner_mask.rst  z_interp.md  z_interp.rst
docs/user_guide/manipulate/: convert.md  convert.rst  dechunk.md  dechunk.rst  index.md  index.rst
lib/contourpy/: __init__.py  _contourpy.pyi  _version.py  array.py  chunk.py  convert.py  dechunk.py  enum_util.py  meson.build  mpl2005.py  typecheck.py
lib/contourpy/util/: __init__.py  _build_config.py.in  bokeh_renderer.py  bokeh_util.py  chunk.py  data.py  meson.build  mpl_renderer.py  mpl_util.py  renderer.py
requirements/: docs.txt  examples.txt  test.txt
src/: base.h  base_impl.h  chunk_local.cpp  chunk_local.h  common.h  contour_generator.h  converter.cpp  converter.h  fill_type.cpp  fill_type.h  interp.cpp  interp.h  line_type.cpp  line_type.h  meson.build  mpl2005.c  mpl2005.cpp  mpl2005.h  mpl2005_original.cpp  mpl2005_original.h  mpl2014.cpp  mpl2014.h  mpl_kind_code.h  outer_or_hole.cpp  outer_or_hole.h  output_array.h  serial.cpp  serial.h  serial_corner.cpp  serial_corner.h  threaded.cpp  threaded.h  util.cpp  util.h  wrap.cpp  z_interp.cpp  z_interp.h
tests/: conftest.py  image_comparison.py  test_array.py  test_bokeh_renderer.py  test_build_config.py  test_chunk.py  test_codebase.py  test_config.py  test_constructor.py  test_constructors.py  test_convert.py  test_dechunk.py  test_enum.py  test_enums.py  test_filled.py  test_internal.py  test_interp.py  test_lines.py  test_minimal.py  test_misc.py  test_renderer.py  test_static.py  test_typecheck.py  test_z_interp.py  util_config.py  util_data.py  util_renderer.py  util_test.py
