[build-system]
build-backend = "mesonpy"
requires = [
    "meson[ninja] >= 1.1.0",
    "meson-python >= 0.13.1",
    "pybind11 >= 2.10.4",
]

[project]
authors = [
    {name = "Ian Thomas", email = "ianthomas23@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy >=1.16",
]
description = "Python library for calculating contours of 2D quadrilateral grids"
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
name = "contourpy"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx-copybutton",
]
bokeh = [
    # Optional dependencies to support use of bokeh renderer.
    # Also needs chrome/chromium for export to PNG/SVG/buffer.
    "bokeh",
    "chromedriver",
    "selenium",
]
mypy = [
    # Requirements to run mypy to check type annotations.
    "contourpy[bokeh,docs]",
    "docutils-stubs",
    "mypy == 1.2.0",
    "types-Pillow",
]
test = [
    # Standard test dependencies.
    "contourpy[test-no-images]",
    "matplotlib",
    "Pillow",
]
test-no-images = [
    # Dependencies to run tests excluding image-generating tests.
    "pytest",
    "pytest-cov",
]

[project.urls]
documentation = "https://contourpy.readthedocs.io"
repository = "https://github.com/contourpy/contourpy"


[tool.meson-python.args]
compile = [
    "-v",
]
dist = []
install = []
setup = [
    "--vsenv",  # Force use of MSVC on Windows, ignored on other platforms
]


[tool.cibuildwheel]
build-frontend = "build"
build = "cp38-* cp39-* cp310-* cp311-* pp38-* pp39-*"
test-command = 'python -c "import contourpy as c; c.contour_generator(z=[[0, 1], [2, 3]]).lines(0.9)"'
# Only test combinations for which a numpy wheel exists
test-skip = "pp38-*-aarch64 pp39-* *musllinux* *-macosx_arm64"

[tool.cibuildwheel.config-settings]
compile-args = "-v"

[tool.cibuildwheel.linux]
archs = "auto aarch64"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.windows]
archs = "AMD64"  # Temporarily exclude x86


[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]


[tool.isort]
force_sort_within_sections = true
multi_line_output = 5
profile = "hug"
skip_gitignore = true


[tool.mypy]
files = ["lib/contourpy", "benchmarks", "docs", "tests"]
python_version = "3.8"

check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "asv.*",
    "matplotlib",
    "matplotlib.*",
]
ignore_missing_imports = true


[tool.ruff]
exclude = [
    "__pycache__",
    ".asv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
]
ignore = [
    "PLW2901",
]
line-length = 100
select = [
    "E",
    "F",
    "PLC",
    "PLE",
    "PLW",
    "UP",
    "W",
]
target-version = "py38"

[tool.ruff.per-file-ignores]
"docs/sphinxext/name_supports.py" = ["E402"]
"docs/sphinxext/name_supports_type.py" = ["E402"]
"lib/contourpy/_contourpy.pyi" = ["E501"]
