[build-system]
build-backend = "mesonpy"
requires = [
    "meson >= 1.2.0",
    "meson-python >= 0.13.1",
    "pybind11 >= 2.10.4",
]

[project]
authors = [
    {name = "Ian Thomas", email = "ianthomas23@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy >= 1.16, < 2.0; python_version <= '3.11'",
    "numpy >= 1.26.0rc1, < 2.0; python_version >= '3.12'",
]
description = "Python library for calculating contours of 2D quadrilateral grids"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "contourpy"
readme = "README_simple.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx >= 7.2",
    "sphinx-copybutton",
]
bokeh = [
    # Optional dependencies to support use of bokeh renderer.
    # Also needs chrome/chromium and chromedriver for export to PNG/SVG/buffer.
    "bokeh",
    "selenium",
]
mypy = [
    # Requirements to run mypy to check type annotations.
    "contourpy[bokeh,docs]",
    "docutils-stubs",
    "mypy == 1.4.1",
    "types-Pillow",
]
test = [
    # Standard test dependencies.
    "contourpy[test-no-images]",
    "matplotlib",
    "Pillow",
]
test-no-images = [
    # Dependencies to run tests excluding image-generating tests.
    "pytest",
    "pytest-cov",
    "wurlitzer",
]

[project.urls]
Homepage = "https://github.com/contourpy/contourpy"
Changelog = "https://contourpy.readthedocs.io/en/latest/changelog.html"
Documentation = "https://contourpy.readthedocs.io"
Repository = "https://github.com/contourpy/contourpy"


[tool.meson-python.args]
compile = [
    "-v",
]
dist = []
install = []
setup = [
    "--vsenv",  # Force use of MSVC on Windows, ignored on other platforms
]


[tool.cibuildwheel]
build-frontend = "build"
build = "cp38-* cp39-* cp310-* cp311-* cp312-* pp38-* pp39-*"
skip = "*-musllinux_aarch64 *-musllinux_ppc64le *-musllinux_s390x pp*_aarch64 pp*_ppc64le pp*_s390x"
test-command = [
    'python -c "from contourpy.util import build_config; from pprint import pprint; pprint(build_config())"',
    'python -c "import contourpy as c; print(c.contour_generator(z=[[0, 1], [2, 3]]).lines(0.9))"',
]
# Only test combinations for which a numpy wheel exists to avoid compiling numpy from source.
test-skip = "*-musllinux_* pp38-* *_ppc64le *_s390x"

[tool.cibuildwheel.windows]
before-build = [
    # Pre-install numpy as no Python 3.12 win32 wheels exist at time of writing.
    "python -m pip install numpy --pre --prefer-binary numpy -Csetup-args=-Dallow-noblas=true"
]


[tool.codespell]
ignore-words-list = "nd"


[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
]


[tool.isort]
force_sort_within_sections = true
multi_line_output = 5
profile = "hug"
skip_gitignore = true


[tool.mypy]
files = ["lib/contourpy", "benchmarks", "docs", "tests"]
python_version = "3.10"

check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "asv.*",
    "matplotlib",
    "matplotlib.*",
    "wurlitzer",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.test_internal"
disable_error_code = "call-arg"


[tool.ruff]
exclude = [
    "__pycache__",
    ".asv",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
]
ignore = [
    "PLW2901",
]
line-length = 100
select = [
    "E",
    "F",
    "NPY",
    "PLC",
    "PLE",
    "PLW",
    "Q",
    "RUF",
    "UP",
    "W",
]
target-version = "py38"

[tool.ruff.per-file-ignores]
"docs/sphinxext/name_supports.py" = ["E402"]
"docs/sphinxext/name_supports_type.py" = ["E402"]
"lib/contourpy/_contourpy.pyi" = ["E501", "PLW0406"]
