[metadata]
author = Ian Thomas
author_email = ianthomas23@gmail.com
description = 2D contouring
license = BSD 3-Clause License
long_description = Calculating contours of 2D quadrilateral grids
name = contourpy
url = https://github.com/contourpy/contourpy

[options]
package_dir =
    =lib
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where=lib

[flake8]
exclude =
    .git,
    .asv,
    __pycache__,
    benchmarks,
    build,
    docs,
max-line-length = 100
per-file-ignores =
    # E402 = module level import not at top of file.
    lib/contourpy/util/mpl_renderer.py: E402,
    tests/util_config.py: E402,
    # F401 = module imported but unused.
    tests/test_static.py: F401,
