[metadata]
author = Ian Thomas
author_email = ianthomas23@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
description = Calculating contours of 2D quadrilateral grids from Python
license = BSD-3-Clause
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = contourpy
platforms = any
url = https://github.com/contourpy/contourpy

[options]
install_requires =
    numpy>=1.20
package_dir =
    = lib
packages = find:
python_requires = >=3.7
zip_safe = False

[options.extras_require]
docs =
    sphinx==4.0.1
    sphinx-rtd-theme
bokeh =
    bokeh
    selenium
    # Also need geckodriver and firefox, or chromedriver and chrome, for export to PNG/SVG/buffer.
test =
    flake8
    matplotlib
    Pillow
    pytest

[options.packages.find]
where = lib

[flake8]
exclude =
    .git,
    .asv,
    __pycache__,
    benchmarks,
    build,
    docs,
max-line-length = 100
per-file-ignores =
    # E402 = module level import not at top of file.
    lib/contourpy/util/mpl_renderer.py: E402,
    tests/util_config.py: E402,
    # F401 = module imported but unused.
    tests/test_static.py: F401,
