[metadata]
author = Ian Thomas
author_email = ianthomas23@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization
description = Python library for calculating contours of 2D quadrilateral grids
license = BSD-3-Clause
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
name = contourpy
platforms = any
url = https://github.com/contourpy/contourpy

[options]
install_requires =
    numpy>=1.16
package_dir =
    = lib
packages = find:
python_requires = >=3.7
zip_safe = False

[options.extras_require]
docs =
    docutils <0.18
    sphinx
    sphinx-rtd-theme
bokeh =
    bokeh
    selenium
    # Also need geckodriver and firefox, or chromedriver and chrome, for export to PNG/SVG/buffer.
test =
    matplotlib
    Pillow
    pytest
dev =
    flake8
    isort
    %(docs)s
    %(test)s

[options.packages.find]
where = lib

[flake8]
exclude =
    .git,
    .asv,
    __pycache__,
    build,
max-line-length = 100
per-file-ignores =
    # E402 = module level import not at top of file.
    docs/sphinxext/name_supports.py: E402,
    docs/sphinxext/name_supports_type.py: E402,
    lib/contourpy/util/mpl_renderer.py: E402,
    tests/util_config.py: E402,
    # F401 = module imported but unused.
    docs/conf.py: E402, F401,
